fixed thread tools being invisible

--- a/less/topic.less
+++ b/less/topic.less
@@ -57,7 +57,7 @@
 	}
 
 	.posts {
-		overflow: hidden;
+		overflow-x: hidden;
 		
 		.post-info, .post-block {
 			position: relative;
